--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@
 }
 
 .selected-mark {
-  border: 2px solid #2e7d32;
+  border: 2px solid green;
   background-color: #a5d6a7;
   cursor: pointer;
   margin: 0 3px;
